--- a/GUI_Prototype02/GUI_Prototype02.csproj
+++ b/GUI_Prototype02/GUI_Prototype02.csproj
@@ -79,11 +79,11 @@
     <Compile Include="MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Order Form1.cs">
+    <Compile Include="Order Form.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Order Form1.Designer.cs">
-      <DependentUpon>Order Form1.cs</DependentUpon>
+    <Compile Include="Order Form.Designer.cs">
+      <DependentUpon>Order Form.cs</DependentUpon>
     </Compile>
     <Compile Include="OrderInsert.cs">
       <SubType>Form</SubType>
@@ -132,8 +132,8 @@
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order Form1.resx">
-      <DependentUpon>Order Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Order Form.resx">
+      <DependentUpon>Order Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OrderInsert.resx">
       <DependentUpon>OrderInsert.cs</DependentUpon>
